--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,16 +1,244 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+:root {
+  --pokeball-height: 150px;
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  height: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  background-color: #1f1e1e;
+  overflow-x: hidden;
+  height: 100%;
+}
+
+h1 {
+  font-size: 3rem;
+  color: #ffffff;
+  text-align: center;
+  margin: 10px 0 30px 0;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 100%;
+}
+
+.root-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.arrow {
+  border-radius: 50%;
+  background-color: red;
+  width: 45px;
+  height: 45px;
+  position: relative;
+  transition: all 0.3s;
+}
+
+.arrow:hover {
+  transform: scale(1.05);
+  background-color: greenyellow;
+  box-shadow: 1px 1px 10px gray;
+}
+
+.arrow::before {
+  content: "";
+  position: absolute;
+  top: 10px;
+  left: 5px;
+  border: solid black;
+  border-width: 0 5px 5px 0;
+  padding: 10px;
+  transform: rotate(-45deg);
+}
+
+
+/* Pokemon Type Styles */
+.normal {
+  background-color: rgb(190, 183, 183);
+}
+
+.fire {
+  background-color: rgb(255, 132, 0);
+}
+
+.water {
+  background-color: rgb(0, 153, 255);
+}
+
+.grass {
+  background-color: rgb(52, 230, 75);
+}
+
+.poison {
+  background-color: rgb(163, 0, 163);
+}
+
+.flying {
+  background-color: rgb(171, 81, 235);
+}
+
+.electric {
+  background-color: rgb(208, 208, 102);
+}
+
+.ice {
+  background-color: rgb(125, 178, 253);
+}
+
+.fighting {
+  background-color: rgb(196, 18, 18);
+}
+
+.ground {
+  background-color: rgb(230, 230, 117);
+}
+
+.psychic {
+  background-color: rgb(243, 112, 134);
+}
+
+.bug {
+  background-color: rgb(213, 212, 153);
+}
+
+.rock {
+  background-color: rgb(186, 225, 128);
+}
+
+.ghost {
+  background-color: rgb(107, 48, 155);
+}
+
+.dark {
+  background-color: rgb(71, 17, 17);
+}
+
+.dragon {
+  background-color: rgb(69, 69, 247);
+}
+
+.steel {
+  background-color: rgb(147, 157, 192);
+}
+
+.fairy {
+  background-color: pink;
+}
+
+/*----------------------------------------------*/
+
+.normalCardColor {
+  background-color: rgb(129, 121, 121);
+}
+
+.fireCardColor {
+  background-color: rgb(235, 175, 112);
+}
+
+.waterCardColor {
+  background-color: rgb(154, 206, 241);
+}
+
+.grassCardColor {
+  background-color: rgb(140, 223, 151);
+}
+
+.poisonCardColor {
+  background-color: rgb(227, 139, 227);
+}
+
+.flyingCardColor {
+  background-color: rgb(171, 81, 235);
+}
+
+.electricCardColor {
+  background-color: rgb(162, 173, 2);
+}
+
+.iceCardColor {
+  background-color: rgb(197, 219, 250);
+}
+
+.fightingCardColor {
+  background-color: rgb(211, 101, 101);
+}
+
+.groundCardColor {
+  background-color: rgb(120, 147, 86);
+}
+
+.psychicCardColor {
+  background-color: rgb(234, 152, 166);
+}
+
+.bugCardColor {
+  background-color: rgb(165, 165, 127);
+}
+
+.rockCardColor {
+  background-color: rgb(156, 188, 105);
+}
+
+.ghostCardColor {
+  background-color: rgb(180, 128, 222);
+}
+
+.darkCardColor {
+  background-color: rgb(89, 62, 62);
+}
+
+.dragonCardColor {
+  background-color: rgb(108, 108, 240);
+}
+
+.steelCardColor {
+  background-color: rgb(188, 193, 214);
+}
+
+.fairyCardColor {
+  background-color: rgb(239, 133, 152);
+}
+
+.type {
+  border-radius: 12px;
+  display: flex;
+  padding-left: 2px;
+  padding-right: 2px;
+  color: white;
+  width: 60px;
+  height: 25px;
+  text-shadow: 0.5px 0.5px black;
+  justify-content: center;
+  align-items: center;
+}
+
+.typeRow {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  gap: 5px;
+  margin: 10px 0;
 }
