--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  width: 100vw;
   background-image: linear-gradient(to bottom, #2e026d, #15162c);
 }
 
