--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -1,11 +1,11 @@
 .overlay {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   display: flex;
   justify-content: center;
 }
